<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_8"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                fontPath="@string/sans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/social"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/md_white_1000"
                tools:ignore="MissingPrefix" />

            <LinearLayout
                android:id="@+id/instagram_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rectSelector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/md_listitem_height"
                android:orientation="horizontal"
                tools:ignore="PrivateResource">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_instagram"
                    app:tint="@color/md_white_1000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp">


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram_page"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/md_white_1000" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.85"
                        android:text="@string/instagram_page_summary"
                        android:textColor="@color/md_white_1000" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/twitter_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rectSelector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/md_listitem_height"
                android:orientation="horizontal"
                tools:ignore="PrivateResource">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_twitter_white_24dp"
                    app:tint="@color/md_white_1000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp">


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter_page"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/md_white_1000" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.85"
                        android:text="@string/twitter_page_summary"
                        android:textColor="@color/md_white_1000" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/patreon_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rectSelector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/md_listitem_height"
                android:orientation="horizontal"
                tools:ignore="PrivateResource">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_patreon"
                    app:tint="@color/md_white_1000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp">


                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/patreon_page"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/md_white_1000" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.85"
                        android:text="@string/patreon_page_summary"
                        android:textColor="@color/md_white_1000" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_3"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                fontPath="@string/sans_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/others"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/md_white_1000"
                tools:ignore="MissingPrefix" />

            <LinearLayout
                android:id="@+id/changelog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rectSelector"
                android:gravity="center_vertical"
                android:minHeight="@dimen/md_listitem_height"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                tools:ignore="PrivateResource">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/changelog"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/md_white_1000" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:text="@string/changelog_summary"
                    android:textColor="@color/md_white_1000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rectSelector"
                android:gravity="center_vertical"
                android:minHeight="@dimen/md_listitem_height"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                tools:ignore="PrivateResource">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_title_open_source_licences"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/md_white_1000" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:text="@string/pref_summary_open_source_licences"
                    android:textColor="@color/md_white_1000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/rectSelector"
                android:gravity="center_vertical"
                android:minHeight="@dimen/md_listitem_height"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                tools:ignore="PrivateResource">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/md_white_1000" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.85"
                    android:text="0.0.0"
                    android:textColor="@color/md_white_1000" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/made_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp" />
</LinearLayout>