<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true">

  <code.name.monkey.retromusic.views.WidthFitSquareLayout
    android:id="@+id/image_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="0.7">

    <android.support.v7.widget.AppCompatImageView
      android:id="@+id/image"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="centerCrop"/>

  </code.name.monkey.retromusic.views.WidthFitSquareLayout>

  <android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <include layout="@layout/status_bar"/>

        </LinearLayout>

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/menu_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:background="@drawable/color_circle_gradient"
            app:backgroundTint="@color/twenty_percent_black_overlay"
            app:srcCompat="@drawable/ic_close_white_24dp"/>

        </FrameLayout>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/editables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:padding="16dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:hint="@string/song"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?android:attr/textColorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:hint="@string/album"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?android:attr/textColorPrimary"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:hint="@string/artist"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/album_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:hint="@string/album_artist"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
              android:id="@+id/genre"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:fontFamily="sans-serif"
              android:gravity="center_vertical"
              android:hint="@string/genre"
              android:maxLines="1"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

          </android.support.design.widget.TextInputLayout>


          <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
              android:id="@+id/year"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:fontFamily="sans-serif"
              android:gravity="center_vertical"
              android:hint="@string/year"
              android:inputType="text|number"
              android:maxLines="1"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

          </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/image_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:hint="@string/track_hint"
            android:inputType="text|number"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:hint="@string/lyrics"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        </android.support.design.widget.TextInputLayout>


      </LinearLayout>
    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/save_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="bottom|end"
    app:backgroundTint="?colorAccent"
    app:srcCompat="@drawable/ic_save_white_24dp"/>

  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"/>


</android.support.design.widget.CoordinatorLayout>

